<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.amr.games.pacman.ui.fx</groupId>
	<artifactId>pacman-ui-fx</artifactId>
	<version>1.0</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.interactivemesh</groupId>
			<artifactId>jimObjModelImporterJFX</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.amr.games.pacman</groupId>
			<artifactId>pacman-core</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>15.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>15.0.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>15</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.6</version>
				<configuration>
					<mainClass>de.amr.games.pacman.ui.fx.app.PacManGameAppFX</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<organization>
		<name>armin.reichert@web.de</name>
	</organization>
</project>